- continued ChatFrame updateL * finished inspector * added workflow structure|summary switch * lots of small UI /UX tweaks